<resources>
    <string name="app_name">quwi</string>
    <string name="user_name">Enter Name</string>
    <string name="user_pass">****</string>
    <string name="login">Login</string>
    <string name="title_activity_project_list">ProjectList</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="baseUrl">https://api.domain.ru</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noInternet">No internet connection</string>
    <string name="add_project">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="desc">Description</string>
    <string name="name">Name</string>
</resources>