<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".login.LoginFragment">
        <EditText
            android:id="@+id/user_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/btcolor"
            android:paddingStart="20dp"
            android:text="@string/user_name"
            android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/user_pass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btcolor"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:text="@string/user_pass"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="@id/user_name"
            app:layout_constraintTop_toBottomOf="@id/user_name" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/twcolor"
            android:text="@string/login"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/user_name"
            app:layout_constraintTop_toBottomOf="@id/user_pass"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
